After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637759 - GIOChannel: fix a crash in g_io_channel_read_chars()
GIOChannel: fix a crash in g_io_channel_read_chars()
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2010-12-21 16:19 UTC by Rui Matos
Modified: 2010-12-28 05:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GIOChannel: fix a crash in g_io_channel_read_chars() (763 bytes, patch)
2010-12-21 16:19 UTC, Rui Matos
none Details | Review

Description Rui Matos 2010-12-21 16:19:34 UTC
If count was 0 and bytes_read NULL we would dereference a NULL pointer.
Comment 1 Rui Matos 2010-12-21 16:19:36 UTC
Created attachment 176841 [details] [review]
GIOChannel: fix a crash in g_io_channel_read_chars()