Fix a possible crash in g_io_channel_read_chars

Patch by Rui Matos, https://bugzilla.gnome.org/show_bug.cgi?id=637759